extras/chirp_lb.yaml
# assumes chirp namespace
apiVersion: v1
kind: Service
metadata:
  name: chirp-gateway-bridge-udp
  namespace: chirp
  labels:
    app: gateway-bridge
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: gateway-bridge
  ports:
    - name: udp-fwd
      port: 1700
      targetPort: 1700
      protocol: UDP
